@@ -92,12 +92,17 @@ class Gem::RemoteFetcher
   # Returns an HTTP proxy URI if one is set in the environment variables.
   def get_proxy_from_env
     env_proxy = ENV['http_proxy'] || ENV['HTTP_PROXY']
-    uri = env_proxy ? URI.parse(env_proxy) : nil
+
+    return nil if env_proxy.nil? or env_proxy.empty?
+
+    uri = URI.parse env_proxy
+
     if uri and uri.user.nil? and uri.password.nil? then
       # Probably we have http_proxy_* variables?
       uri.user = escape(ENV['http_proxy_user'] || ENV['HTTP_PROXY_USER'])
       uri.password = escape(ENV['http_proxy_pass'] || ENV['HTTP_PROXY_PASS'])
     end
+
     uri
   end
 
